--- a/html/index.html
+++ b/html/index.html
@@ -25,15 +25,22 @@
                 <div class="text">
                     <h1>Check The Status</h1>
 
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum quibusdam aspernatur amet
-                        debitis dignissimos, ipsum veniam quidem, nobis consequatur vero repudiandae tempora aliquam
-                        architecto maiores nihil ipsam, sequi optio mollitia.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Laborum quibusdam aspernatur amet
+                        debitis dignissimos.. </p>
                 </div>
-
-                <div class="design active"></div>
-                <div class="design"></div>
-                <div class="design"></div>
-
+                <div class="design-border">
+                    <ul>
+                        <li>
+                            <div class="active"></div>
+                        </li>
+                        <li>
+                            <div></div>
+                        </li>
+                        <li>
+                            <div></div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </header>
 
@@ -106,23 +113,21 @@
 
         <footer>
             <div class="socials">
-                <div class="face">
-                    <a href=""><img src="/assets/facebook.png" alt="facebook-logo"></a>
-                </div>
-
-                <div class="twitter">
-                    <a href=""><img src="/assets/twitter.png" alt="twitter-logo"></a>
-                </div>
-
-                <div class="linkedin">
-                    <a href=""><img src="/assets/linkedin.png" alt="linkedin-logo"></a>
+                <div class="logo-socials">
+                    <ul>
+                        <li><a href=""><img src="/assets/facebook.png" alt=""></a></li>
+                        <li><a href=""><img src="/assets/twitter.png" alt=""></a></li>
+                        <li><a href=""><img src="/assets/linkedin.png" alt=""></a></li>
+                    </ul>
                 </div>
             </div>
 
             <div class="copy">
-                <p>PrivacyPolicy</p>
-                <p>Contact</p>
-                <p><a href="">@2022rafaapcode</a></p>
+                <ul>
+                    <li>PrivacyPolicy</li>
+                    <li>Contact</li>
+                    <li><a href="">@2022rafaapcode</a></li>
+                </ul>
             </div>
         </footer>
 
