--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- Logo -->
         <div class="logo">
-
+            <h1>logo</h1>
         </div>
 
         <!-- Texts, Socials, ETC -->
@@ -124,8 +124,8 @@
 
             <div class="copy">
                 <ul>
-                    <li>PrivacyPolicy</li>
-                    <li>Contact</li>
+                    <li><a href="">PrivacyPolicy</a></li>
+                    <li><a href="">Contact</a></li>
                     <li><a href="">@2022rafaapcode</a></li>
                 </ul>
             </div>
