--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- Logo -->
         <div class="logo">
-            <h1>logo</h1>
+            <img src="/assets/logo.png" alt="logo">
         </div>
 
         <!-- Texts, Socials, ETC -->
@@ -60,7 +60,7 @@
                     <div class="mail">
                         <p>Email Address</p>
                         <form>
-                            <input type="email" name="mail" class="input-email">
+                            <input type="email" name="mail" class="input-email" placeholder="mail@user.com">
                         </form>
                     </div>
 
@@ -68,17 +68,13 @@
                     <div class="pass">
                         <p>Password</p>
                         <form>
-                            <input type="password" name="pass" class="input-password">
+                            <input type="password" name="pass" class="input-password" placeholder="•••••••••">
                         </form>
                     </div>
 
 
                     <div class="remember">
-                        <input type="checkbox" name="check" class="input-check"> <span>Remember-me</span>
-                    </div>
-
-                    <div class="forgotPass">
-                        <a href="">Forgotten Password</a>
+                        <input type="checkbox" name="check" class="input-check"><span>Remember-me</span>
                     </div>
 
                 </div>
