--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <title>Sign-In</title>
 </head>
 
@@ -68,7 +69,7 @@
                     <div class="pass">
                         <p>Password</p>
                         <form>
-                            <input type="password" name="pass" class="input-password" placeholder="•••••••••">
+                            <input type="password" name="pass" class="input-password" placeholder="•••••••••"> 
                         </form>
                     </div>
 
@@ -130,6 +131,7 @@
 
     </div>
 
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
